changed linkedin link from alexbannon to linkedin directly

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<ul>
 		<li><a href="about.html">About</a></li>
 		<li><a href="contact.html">Contact</a></li>
-		<li><a href="http://www.alexbannon.com">LinkedIn</a></li>
+		<li><a href="https://www.linkedin.com/in/alexbannon">LinkedIn</a></li>
 	</ul>
 	<!--<script>
     $("button").on("click", function() {
