--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	  		background: url("http://i.imgur.com/ZKeZHd0.jpg");
 	  		text-align: center;
 	  		color: white;
-			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;	  	
+			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 		}
 	  	a {
 	  		color: white;
@@ -42,7 +42,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="contact.html">Contact</a></li>
-			<li><a href="http://www.alexbannon.com">LinkedIn</a></li>
+			<li><a href="https://www.linkedin.com/in/alexbannon">LinkedIn</a></li>
 		</ul>
 	</header>
 	<article>
