--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	  		background: url("http://i.imgur.com/ZKeZHd0.jpg");
 	  		text-align: center;
 	  		color: white;
-			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;	  	
+			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 		}
 	  	a.class1 {
 	  		color: white;
@@ -49,7 +49,7 @@
 		<ul>
 			<li><a href="index.html" class=class1>Home</a></li>
 			<li><a href="about.html" class=class1>About</a></li>
-			<li><a href="http://www.alexbannon.com" class=class1>LinkedIn</a></li>
+			<li><a href="https://www.linkedin.com/in/alexbannon" class=class1>LinkedIn</a></li>
 		</ul>
 	</header>
 	<article>
