--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<li><a href="about.html">About</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="https://www.linkedin.com/in/alexbannon">LinkedIn</a></li>
+    <li><a href="/myblog/index.html">Jekyll</a></li>
 	</ul>
 	<!--<script>
     $("button").on("click", function() {
