testing github commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <h1>Alex Bannon</h1>
-	<p>Hi! I'm Alex, a DC-based web developer. Sign up for my weekly digest by entering your email address below!</p>
+	<p>Hi! This is a test that github is updating. I'm Alex, a DC-based web developer. Sign up for my weekly digest by entering your email address below!</p>
 	<!--<button>Share on Facebook</button> Maybe add social outreach? Reddit/Facebook/etc-->
 	<form>
 		<input type="text" placeholder="Your Email">
