added <html> and charset to beginning of files

--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
 	<style>
 		body {
   			font-family: helvetica;
@@ -55,3 +58,4 @@
 		<h2>Present Day</h2>
 		<p>I returned to DC in January of 2013 to pursue a career in politics. After working in several different non-profits throughout the DC area, I decided it was time for a career change and am now pursuing work in programming, specifically web design. It took several of my friends much cajoling in order for me to finally pursue this path, but have always had an interest in coding. I played around with it whenever I had free time, but realized pretty quickly I need to invest a large amount of time and effort in order to master it. For this reason, I am now pursuing coding boot camps.</p>
 </body>
+</html>
