--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
 	<style>
 		body {
   			font-family: helvetica;
@@ -56,3 +59,4 @@
 		<h4>Contact Information <br><br><br>301-919-4523 <br> <a href="mailto:alexbannon@gmail.com?subject=Outreach via Website" class=class2>alexbannon@gmail.com</a> <br> 1367 Massachusetts Ave SE, Washington, DC</h4>
 	</article>
 </body>
+</html>
