--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta content="utf-8" http-equiv="encoding">
   <title>Alex Bannon's Bio</title>
   <link href="style.css" rel="stylesheet">
   <style>
@@ -39,3 +42,4 @@
   </script> to add a "thanks for sharing!" comment when sharing on facebook-->
 </body>
 <!--link href="/normalize.css" rel="stylesheet"> this is a normal css stylesheet, but not sure exactly what it does yet-->
+</html>
