--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
 	<style>
 		a {
 			color: black;
@@ -24,3 +27,4 @@
 	<li><a href="contact.html">Contact</a></li>
 </ul>
 </body>
+</html>
