--- a/index.html
+++ b/index.html
@@ -1,45 +1,286 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <title>Alex Bannon's Bio</title>
-  <link href="style.css" rel="stylesheet">
-  <style>
-  body {
-      text-align: center;
-      background: url("https://scontent-iad3-1.xx.fbcdn.net/hphotos-xap1/t31.0-8/1537857_10102064463310780_647516120_o.jpg");
-      background-size: cover;
-      background-position: top;
-      color: white;
-      font-family: helvetica;
-    }
-    @media (max-width: 500px) {
-    	li {
-    		display: block;
-    		padding: 5px;
-    	}
-    }
-    </style>
+	<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="You can edit this line in _config.yml. It will appear in your document  head meta (for Google search results) and in your feed.xml site  description.">
+    <meta name="author" content="Alex Bannon">
+
+    <title>Alex Bannon Portfolio</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link href="http://shaneweng.com/landing-page-theme/css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body>
-  <h1>Alex Bannon</h1>
-	<p>Hi! I'm Alex, a DC-based web developer. Sign up for my weekly digest by entering your email address below!</p>
-	<!--<button>Share on Facebook</button> Maybe add social outreach? Reddit/Facebook/etc-->
-	<form>
-		<input type="text" placeholder="Your Email">
-		<input type="submit">
-	</form>
-	<ul>
-		<li><a href="about.html">About</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		<li><a href="https://www.linkedin.com/in/alexbannon">LinkedIn</a></li>
-	</ul>
-	<!--<script>
-    $("button").on("click", function() {
-      alert("Thanks for Sharing!")
-    });
-  </script> to add a "thanks for sharing!" comment when sharing on facebook-->
-</body>
-<!--link href="/normalize.css" rel="stylesheet"> this is a normal css stylesheet, but not sure exactly what it does yet-->
+
+	<body>
+		<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="#home">Alex Bannon's Portfolio</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="page-scroll" href="http://alexbannon.herokuapp.com">Non-Jekyll Site</a>
+                </li>
+
+                <li>
+                    <a class="page-scroll" href="#about">About</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#services">Portfolio</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+<section id="home">
+<!-- Header -->
+	<div class="intro-header">
+
+		<div class="container">
+
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="intro-message">
+						<h1>Alex Bannon</h1>
+						<h3>A recent graduate of General Assembly's Web Development Program looking for a new challenge</h3>
+						<hr class="intro-divider">
+						<ul class="list-inline intro-social-buttons">
+							<li>
+								<a href="https://twitter.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
+							</li>
+							<li>
+								<a href="https://github.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+							</li>
+							<li>
+								<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<!-- /.container -->
+
+	</div>
+	<!-- /.intro-header -->
+</section>
+
+		    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+              <br/><br/>
+              <h2>About Me</h2>
+              <br/>
+              <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on codecademy and khanacademy, I decided to dive in head first and attend a web development immersive at General Assembly.</p>
+              <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p>
+              <p>Or view my resume <a href="http://join.deathtothestockphoto.com//">here</a>.</p>
+              <br/>
+            </div>
+        </div>
+    </section>
+
+		<section id="services">
+<!-- Page Content -->
+
+
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Flake</h2>
+                    <div class="lead">
+                      <p>A social media clone done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Users can sign up, create, edit, update, and delete events, posts, and comments. Currently updating the site with more jquery and ajax calls in order to make it responsive.</p>
+                      <p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku</a></p>
+                      <p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="http://i.imgur.com/wNeZws0.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+
+
+
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">WanderList -<br>A Collaborative Project</h2>
+                    <div class="lead">
+                      <p>A site where users can pin locations, both past and future, to a map to visualize their travels. On this project I acted as lead, hosting the repo and overseeing pull requests as well as organizing daily structure, delegating tasks when necessary, and calling for group scrums to re-orient the project. User signup done through Twitter OAuth. Application uses Node.js and Express and all functionality is on a single page (apart from Authentication). Nav bar uses Bootstrap, responsiveness relies on jquery and ajax.</p>
+                      <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku</a></p>
+                      <p><a href="http://github.com/alexbannon/wanderlist">Repo on Github</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                  <img class="img-responsive" src="http://i.imgur.com/s39Qq2N.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+
+
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Trip-Me<br>A Collaborative Project with UX</h2>
+                    <div class="lead">
+                      <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the mapbox and instagram APIs in order to show users photos based on location and keyword search. Also done in rails.</p>
+                      <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku</a></p>
+                      <p><a href="https://github.com/alexbannon/trip.me">Repo on Github</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="http://i.imgur.com/BkPX2Nk.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+
+</section>
+
+		<section id="contact">
+	<div class="banner">
+		<div class="container">
+
+			<div class="row">
+				<div class="col-lg-6">
+					<h2>Keep in Touch:</h2>
+				</div>
+				<div class="col-lg-6">
+					<ul class="list-inline banner-social-buttons">
+
+						<li>
+							<a href="https://twitter.com/alebannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
+						</li>
+
+						<li>
+							<a href="https://github.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
+						</li>
+
+						<li>
+							<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+						</li>
+
+					</ul>
+				</div>
+			</div>
+
+		</div>
+		<!-- /.container -->
+
+	</div>
+</section>
+<!-- /.banner -->
+		<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <ul class="list-inline">
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted small">Alex Bannon's Portfolio Site</p>
+            </div>
+            <div class="col-md-4">
+                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
+            </div>
+        </div>
+    </div>
+</footer>
+
+		<!-- jQuery Version 1.11.0 -->
+<script src="http://shaneweng.com/landing-page-theme/js/jquery-1.11.0.js"></script>
+
+<!-- Plugin JavaScript -->
+    <script src="http://shaneweng.com/landing-page-theme/js/jquery.easing.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- Custom Theme JavaScript -->
+<script src="http://shaneweng.com/landing-page-theme/js/landing-page.js"></script>
+
+	</body>
 </html>
