--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="http://alexbannon.herokuapp.com">Non-Jekyll Site</a>
+                    <a class="page-scroll" href="http://alexbannon.herokuapp.com">Non-Bootstrap Site</a>
                 </li>
 
                 <li>
