--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+
                 <li>
                     <a class="page-scroll" href="http://alexbannon.herokuapp.com">Non-Bootstrap Site</a>
                 </li>
@@ -78,6 +79,10 @@
 						<h3>A recent graduate of General Assembly's Web Development Program looking for a new challenge</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
+              <li>
+                <a href="mailto:alexbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">email</span></a>
+              </li>
+
 							<li>
 								<a href="https://twitter.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
 							</li>
@@ -218,6 +223,10 @@
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
 
+            <li>
+							<a href="mailto:alexbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">email</span></a>
+						</li>
+
 						<li>
 							<a href="https://twitter.com/alebannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
 						</li>
@@ -265,7 +274,6 @@
                 <p class="copyright text-muted small">Alex Bannon's Portfolio Site</p>
             </div>
             <div class="col-md-4">
-                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
             </div>
         </div>
     </div>
