--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 						</li>
 
 						<li>
-							<a href="https://twitter.com/alebannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
+							<a href="https://twitter.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
 						</li>
 
 						<li>
