--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               <h2>About Me</h2>
               <br/>
               <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on codecademy and khanacademy, I decided to dive in head first and attend a web development immersive at General Assembly.</p>
-              <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p>
-              <p>Or view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGAdjB0XzM5ZjZTSDg/view?usp=sharing">here</a>.</p>
+              <!-- <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p> -->
+              <p>For more information on my background, feel free to view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGAdjB0XzM5ZjZTSDg/view?usp=sharing">here</a>.</p>
               <br/>
             </div>
         </div>
