added credit to bootstrap

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                 <p class="copyright text-muted small">Alex Bannon's Portfolio Site</p>
             </div>
             <div class="col-md-4">
+							Credits: I heavily relied on bootstrap and pre-made themes in order to make this site.
             </div>
         </div>
     </div>
