changed resume and intro

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<h1>Alex Bannon</h1>
-						<h3>A recent graduate of General Assembly's Web Development Program looking for a new challenge</h3>
+						<h3>Full Stack Web Developer and Recovering Policy Wonk Looking For My Next Challenge</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
               <li>
@@ -112,8 +112,14 @@
               <h2>About Me</h2>
               <br/>
               <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on codecademy and khanacademy, I decided to dive in head first and attend a web development immersive at General Assembly.</p>
+							<p>Current projects include:</p>
+							<ul>
+								<li>A Python/Django Web Crawler - mainly to teach myself Python for fun.</li>
+								<li>A singly-page web app in Node and Angular that organizes group house chore planning - this one more for my sanity than for pleasure.</li>
+								<li>I'm also trying out very low level robotics - and by low level, I mean starter kit level.</li>
+							</ul>
               <!-- <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p> -->
-              <p>For more information on my background, feel free to view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGASFN3SzNCMU9COG8/view?usp=sharing">here</a>.</p>
+              <p>For more information on my background, feel free to view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGAdHpHWEZwVjlSeUk/view?usp=sharing">here</a>.</p>
               <br/>
             </div>
         </div>
@@ -134,7 +140,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">WanderList -<br>Collaborative Project - Project Lead</h2>
 										<div class="lead">
-                      <p>A site where users can pin locations, both past and future, to a map to visualize their travels. On this project I acted as lead, hosting the repo and overseeing pull requests as well as organizing daily structure, delegating tasks when necessary, and calling for group scrums to re-orient the project. User signup done through Twitter OAuth. Application uses Node.js and Express and all functionality is on a single page (apart from Authentication). Nav bar uses Bootstrap, responsiveness relies on jquery and ajax.</p>
+                      <p>A site where users can pin locations, both past and future, to a map to visualize their travels. On this project I acted as lead, hosting the repo and overseeing pull requests as well as organizing daily structure, delegating tasks when necessary, and calling for group scrums to re-orient the project. User signup done through Twitter OAuth. Application uses Node.js and Express and all functionality is on a single page (apart from Authentication). Nav bar uses Bootstrap, responsiveness relies on jQuery and AJAX.</p>
                       <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku</a></p>
                       <p><a href="http://github.com/alexbannon/wanderlist">Repo on Github</a></p>
                     </div>
@@ -164,7 +170,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Flake</h2>
 										<div class="lead">
-											<p>A social media clone done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Users can sign up, create, edit, update, and delete events, posts, and comments. Currently updating the site with more jquery and ajax calls in order to make it responsive.</p>
+											<p>A social media clone done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Users can sign up, create, edit, update, and delete events, posts, and comments. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
 											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku</a></p>
 											<p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
 										</div>
@@ -193,7 +199,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Trip-Me<br>A Collaborative Project with UX</h2>
                     <div class="lead">
-                      <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the mapbox and instagram APIs in order to show users photos based on location and keyword search. Also done in rails.</p>
+                      <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the Mapbox and Instagram APIs in order to show users photos based on location and keyword search. Also done in Rails.</p>
                       <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku</a></p>
                       <p><a href="https://github.com/alexbannon/trip.me">Repo on Github</a></p>
                     </div>
@@ -274,7 +280,7 @@
                 <p class="copyright text-muted small">Alex Bannon's Portfolio Site</p>
             </div>
             <div class="col-md-4">
-							Credits: I heavily relied on bootstrap and pre-made themes in order to make this site.
+							Credits: I heavily relied on bootstrap and pre-made themes in order to make this site. To see handrolled front-end work, check out any of my projects above!
             </div>
         </div>
     </div>
