--- a/index.html
+++ b/index.html
@@ -113,11 +113,9 @@
               <br/>
               <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on codecademy and khanacademy, I decided to dive in head first and attend a web development immersive at General Assembly.</p>
 							<p>Current projects include:</p>
-							<ul>
-								<li>A Python/Django Web Crawler - mainly to teach myself Python for fun.</li>
-								<li>A singly-page web app in Node and Angular that organizes group house chore planning - this one more for my sanity than for pleasure.</li>
-								<li>I'm also trying out very low level robotics - and by low level, I mean starter kit level.</li>
-							</ul>
+								<p>A Python/Django Web Crawler - mainly to teach myself Python for fun.</p>
+								<p>A singly-page web app in Node and Angular that organizes group house chore planning - this one more for my sanity than for pleasure.</p>
+								<p>I'm also trying out very low level robotics - and by low level, I mean starter kit level.</p>
               <!-- <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p> -->
               <p>For more information on my background, feel free to view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGAdHpHWEZwVjlSeUk/view?usp=sharing">here</a>.</p>
               <br/>
