--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 						</li>
 
 						<li>
-							<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
+							<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><span class="network-name">linkedin</span></a>
 						</li>
 
 					</ul>
