tweaked descriptions and about me

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               <br/><br/>
               <h2>About Me</h2>
               <br/>
-              <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on codecademy and khanacademy, I decided to dive in head first and attend a web development immersive at General Assembly.</p>
-							<p>Current projects include a Python/Django Web Crawler - mainly to teach myself Python for fun. A singly-page web app in Node and Angular that organizes group house chore planning - this one more for my sanity than for pleasure. Finally, I'm also trying out very low level robotics - and by low level, I mean starter kit level.</p>
+              <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on Codecademy and Khan Academy, I decided to dive in head first and attend a Web Development Immersive at General Assembly.</p>
+							<p>Current projects include a Python/Django Web Crawler - mainly to teach myself Python for fun. A single-page web app in Node and Angular that organizes group house chore planning - this one more for my sanity than for pleasure. Finally, I'm also trying out very low level robotics - and by low level, I mean starter kit level.</p>
               <!-- <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p> -->
               <p>For more information on my background, feel free to view my resume <a href="https://drive.google.com/file/d/0BxTLlwYhTMGAdHpHWEZwVjlSeUk/view?usp=sharing">here</a>.</p>
               <br/>
@@ -165,7 +165,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Flake</h2>
 										<div class="lead">
-											<p>A social media clone done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Users can sign up, create, edit, update, and delete events, posts, and comments. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
+											<p>A social media site done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
 											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku</a></p>
 											<p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
 										</div>
