--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
     <title>Alex Bannon Portfolio</title>
 
-    <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- Custom CSS -->
-    <link href="http://shaneweng.com/landing-page-theme/css/landing-page.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="http://shaneweng.com/landing-page-theme/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -123,6 +121,31 @@
 		<section id="services">
 <!-- Page Content -->
 
+			<div class="content-section-b">
+
+					<div class="container">
+
+							<div class="row">
+									<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+											<hr class="section-heading-spacer">
+											<div class="clearfix"></div>
+											<h2 class="section-heading">Empty Desks</h2>
+											<div class="lead">
+												<p>A to-do and task planner that allows multiple users to cross-collaborate on a given project. Integrates with a calendar in order to visualize tasks effectively. A MEAN stack app - MongoDB, Express, Angular, and Node.js - and deployed on Amazon Web Services, users can create a Desk, add members, add and edit lists, comment on the sidebar, and add a due date, all from their browser.</p>
+												<p><a href="http://emptydesks.com">Deployed on AWS EC2</a></p>
+												<p><a href="https://github.com/alexbannon/empty_desks">Repo on Github</a></p>
+											</div>
+									</div>
+									<div class="col-lg-5 col-sm-pull-6  col-sm-6">
+										<img class="img-responsive" src="images/Empty_Desks.png" alt="Empty Desks">
+									</div>
+							</div>
+
+					</div>
+					<!-- /.container -->
+
+			</div>
+<!-- /.content-section-b -->
 
 
     <div class="content-section-a">
@@ -136,12 +159,12 @@
                     <h2 class="section-heading">WanderList -<br>Collaborative Project - Project Lead</h2>
 										<div class="lead">
                       <p>A site where users can pin locations, both past and future, to a map to visualize their travels. On this project I acted as lead, hosting the repo and overseeing pull requests as well as organizing daily structure, delegating tasks when necessary, and calling for group scrums to re-orient the project. User signup done through Twitter OAuth. Application uses Node.js and Express and all functionality is on a single page (apart from Authentication). Nav bar uses Bootstrap, responsiveness relies on jQuery and AJAX.</p>
-                      <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku</a></p>
+                      <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
                       <p><a href="http://github.com/alexbannon/wanderlist">Repo on Github</a></p>
                     </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i.imgur.com/s39Qq2N.png" alt="WanderList">
+                    <img class="img-responsive" src="images/Wander-List.jpeg" alt="WanderList">
                 </div>
             </div>
 
@@ -166,12 +189,12 @@
                     <h2 class="section-heading">Flake</h2>
 										<div class="lead">
 											<p>A social media site done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
-											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku</a></p>
+											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
 											<p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
 										</div>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                  <img class="img-responsive" src="http://i.imgur.com/wNeZws0.png" alt="Flake">
+                  <img class="img-responsive" src="images/Flake.png" alt="Flake">
                 </div>
             </div>
 
@@ -195,12 +218,12 @@
                     <h2 class="section-heading">Trip-Me<br>A Collaborative Project with UX</h2>
                     <div class="lead">
                       <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the Mapbox and Instagram APIs in order to show users photos based on location and keyword search. Also done in Rails.</p>
-                      <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku</a></p>
+                      <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
                       <p><a href="https://github.com/alexbannon/trip.me">Repo on Github</a></p>
                     </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="http://i.imgur.com/BkPX2Nk.png" alt="">
+                    <img class="img-responsive" src="images/trip-me.png" alt="">
                 </div>
             </div>
 
@@ -275,7 +298,7 @@
                 <p class="copyright text-muted small">Alex Bannon's Portfolio Site</p>
             </div>
             <div class="col-md-4">
-							Credits: I heavily relied on bootstrap and pre-made themes in order to make this site. To see handrolled front-end work, check out any of my projects above!
+							Credits: My portfolio page relied on Bootstrap. For more handrolled front end work, check out any of my portfolio pieces above. Thank you for checking out my site!
             </div>
         </div>
     </div>
