tweaked trip-me and flake description

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Flake</h2>
 										<div class="lead">
-											<p>A social media site done in rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
+											<p>A social media site done in Rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
 											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
 											<p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
 										</div>
@@ -217,7 +217,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Trip-Me<br>A Collaborative Project with UX</h2>
                     <div class="lead">
-                      <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the Mapbox and Instagram APIs in order to show users photos based on location and keyword search. Also done in Rails.</p>
+                      <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the Mapbox and Instagram APIs in order to show users photos based on location and keyword search. App utilizes a Rails back-end.</p>
                       <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
                       <p><a href="https://github.com/alexbannon/trip.me">Repo on Github</a></p>
                     </div>
