removed delay warning or heroku

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <h2 class="section-heading">WanderList -<br>Collaborative Project - Project Lead</h2>
 										<div class="lead">
                       <p>A site where users can pin locations, both past and future, to a map to visualize their travels. On this project I acted as lead, hosting the repo and overseeing pull requests as well as organizing daily structure, delegating tasks when necessary, and calling for group scrums to re-orient the project. User signup done through Twitter OAuth. Application uses Node.js and Express and all functionality is on a single page (apart from Authentication). Nav bar uses Bootstrap, responsiveness relies on jQuery and AJAX.</p>
-                      <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
+                      <p><a href="http://wander-list.herokuapp.com/">Deployed on Heroku</a></p>
                       <p><a href="http://github.com/alexbannon/wanderlist">Repo on Github</a></p>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     <h2 class="section-heading">Flake</h2>
 										<div class="lead">
 											<p>A social media site done in Rails with handrolled user authentication. Utilizes five models including users, events, posts, comments, and a self-referential model of friends. Currently updating the site with more jQuery and AJAX calls in order to make it responsive.</p>
-											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
+											<p><a href="http://alexbannon-flake.herokuapp.com/">Deployed on Heroku</a></p>
 											<p><a href="http://github.com/alexbannon/flake">Repo on Github</a></p>
 										</div>
                 </div>
@@ -218,7 +218,7 @@
                     <h2 class="section-heading">Trip-Me<br>A Collaborative Project with UX</h2>
                     <div class="lead">
                       <p>This project was a 2.5 day sprint that focused on the user experience process. Starting with a design studio, following it up with user research, scrapping everything and starting over, we finally arrived here, at a site that utilizes the Mapbox and Instagram APIs in order to show users photos based on location and keyword search. App utilizes a Rails back-end.</p>
-                      <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku (Initial 5s Delay)</a></p>
+                      <p><a href="https://trip-me.herokuapp.com/">Deployed on Heroku</a></p>
                       <p><a href="https://github.com/alexbannon/trip.me">Repo on Github</a></p>
                     </div>
                 </div>
