--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
               <li>
-                <a href="mailto:alexbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
+                <a href="mailto:alexdbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
               </li>
 
 							<li>
@@ -248,7 +248,7 @@
 					<ul class="list-inline banner-social-buttons">
 
             <li>
-							<a href="mailto:alexbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
+							<a href="mailto:alexdbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
 						</li>
 
 						<li>
