added browserstreams project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -118,8 +118,35 @@
         </div>
     </section>
 
-		<section id="services">
+		<section id="portfolio">
 <!-- Page Content -->
+
+		<div class="content-section-a">
+
+				<div class="container">
+
+						<div class="row">
+								<div class="col-lg-5 col-sm-6">
+										<hr class="section-heading-spacer">
+										<div class="clearfix"></div>
+										<h2 class="section-heading">BrowserSTREAMS -<br>Solo Project</h2>
+										<div class="lead">
+											<p>A site where users can browse across multiple online streaming services - Netflix, Hulu, HBO, and Amazon. Stack: Node 7, Express, Redis, Postgres 9.6, Angular 1.6.2, JavaScript, jQuery, Guidebox and IMDb APIs, ImageMagick Image Transformations, and S3 file upload. Testing on Protractor and Mocha. Currently deployed on a t2 nano ec2 instance set up on an Amazon Linux AMI.</p>
+											<p><a href="http://browserstreams.com">Deployed on AWS</a></p>
+											<p><a href="https://github.com/alexbannon/browserstream">Repo on Github</a></p>
+										</div>
+								</div>
+								<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+										<img class="img-responsive" src="images/BrowserStreams.png" alt="BrowserSTREAMS">
+								</div>
+						</div>
+
+				</div>
+				<!-- /.container -->
+
+		</div>
+		<!-- /.content-section-a -->
+
 
 			<div class="content-section-b">
 
@@ -288,7 +315,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
