--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 										</div>
 								</div>
 								<div class="col-lg-5 col-lg-offset-2 col-sm-6">
-										<img class="img-responsive" src="images/BrowserStreams.png" alt="BrowserSTREAMS">
+										<img class="img-responsive" src="images/browserStreams.png" alt="BrowserSTREAMS">
 								</div>
 						</div>
 
