--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<h1>Alex Bannon</h1>
-						<h3>Full Stack Web Developer and Recovering Policy Wonk Looking For My Next Challenge</h3>
+						<h3>Full Stack Developer Who Never Shies Away from a Good Challenge</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
               <li>
@@ -109,10 +109,9 @@
               <br/><br/>
               <h2>About Me</h2>
               <br/>
-              <p>Coming from a background of policy and writing, I decided to make a career change into the world of programming. After exploring database structure, chatting with friends already in the field, and doing endless hours on Codecademy and Khan Academy, I decided to dive in head first and attend a Web Development Immersive at General Assembly.</p>
-							<p>Current side projects include a Python/Django Web Crawler - mainly to teach myself Python for fun. I'm also exploring iOS programming with a goal to build a very simply Snake game. Finally, I'm also trying out very low level robotics - and by low level, I mean starter kit level. But hey, you have to start somewhere.</p>
-              <!-- <p>For more information, check out my personal site at <a href="http://www.alexbannon.com">AlexBannon.com</a>.</p> -->
-              <p>For more information on my background, feel free to view my resume <a href="images/Alex_Bannon_Resume.pdf">here</a>.</p>
+              <p>Former policy wonk who got swept up in the world of programming. I never stop enjoying the endless depths of the coding world. When asked about my side projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
+							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If my application isn't constantly iterating and changing, it's only a matter of time until it no longer exists.</p>
+              <p>For more information on my background, feel free to view my resume <a href="images/resume_alex_bannon.pdf">here</a>.</p>
               <br/>
             </div>
         </div>
@@ -159,7 +158,6 @@
 											<h2 class="section-heading">Empty Desks</h2>
 											<div class="lead">
 												<p>A to-do and task planner that allows multiple users to cross-collaborate on a given project. Integrates with a calendar in order to visualize tasks effectively. A MEAN stack app - MongoDB, Express, Angular, and Node.js - and deployed on Amazon Web Services, users can create a Desk, add members, add and edit lists, comment on the sidebar, and add a due date, all from their browser.</p>
-												<p><a href="http://emptydesks.com">Deployed on AWS EC2</a></p>
 												<p><a href="https://github.com/alexbannon/empty_desks">Repo on Github</a></p>
 											</div>
 									</div>
