--- a/index.html
+++ b/index.html
@@ -80,10 +80,6 @@
               <li>
                 <a href="mailto:alexdbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
               </li>
-
-							<li>
-								<a href="https://twitter.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
-							</li>
 							<li>
 								<a href="https://github.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
 							</li>
@@ -275,19 +271,12 @@
             <li>
 							<a href="mailto:alexdbannon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
 						</li>
-
-						<li>
-							<a href="https://twitter.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">twitter</span></a>
-						</li>
-
 						<li>
 							<a href="https://github.com/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
 						</li>
-
 						<li>
-							<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><span class="network-name">linkedin</span></a>
+							<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
 						</li>
-
 					</ul>
 				</div>
 			</div>
