updated about me, updated resume, temp removed browserstream link

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
               <br/><br/>
               <h2>About Me</h2>
               <br/>
-              <p>Former policy wonk who got swept up in the world of programming. I never stop enjoying the endless depths of the coding world. When asked about my side projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
+              <p>I never stop enjoying the endless depths of the coding world. When asked about my side projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
 							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If my application isn't constantly iterating and changing, it's only a matter of time until it no longer exists.</p>
-              <p>For more information on my background, feel free to view my resume <a href="images/resume_alex_bannon.pdf">here</a>.</p>
+              <p>For more information on my background, feel free to view my resume <a href="images/alex_bannon_resume.pdf">here</a>.</p>
               <br/>
             </div>
         </div>
@@ -127,7 +127,7 @@
 										<h2 class="section-heading">BrowserSTREAMS -<br>Solo Project</h2>
 										<div class="lead">
 											<p>A site where users can browse across multiple online streaming services - Netflix, Hulu, HBO, and Amazon. Stack: Node 7, Express, Redis, Postgres 9.6, Angular 1.6.2, JavaScript, jQuery, Guidebox and IMDb APIs, ImageMagick Image Transformations, and S3 file upload. Testing on Protractor and Mocha. Currently deployed on a t2 nano ec2 instance set up on an Amazon Linux AMI.</p>
-											<p><a href="http://browserstreams.com">Deployed on AWS</a></p>
+											<!-- <p><a href="http://browserstreams.com">Deployed on AWS</a></p> -->
 											<p><a href="https://github.com/alexbannon/browserstream">Repo on Github</a></p>
 										</div>
 								</div>
