--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
+								<li>
+										<a href="images/alex_bannon_resume.pdf" target="_blank">Resume</a>
+								</li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
@@ -86,6 +89,9 @@
 							<li>
 								<a href="http://www.linkedin.com/in/alexbannon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
 							</li>
+							<li>
+								<a href="images/alex_bannon_resume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-file fa-fw"></i> <span class="network-name">Resume</span></a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -99,11 +105,11 @@
 </section>
 
 		    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Me</h2>
+              <h2 class="text-center">About Me</h2>
               <br/>
               <p>I never stop enjoying the endless depths of the coding world. When asked about my side projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
 							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If my application isn't constantly iterating and changing, it's only a matter of time until it no longer exists.</p>
