--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<h1>Alex Bannon</h1>
-						<h3>Full Stack Developer Who Never Shies Away from a Good Challenge</h3>
+						<h3>Product-Focused Senior Engineering Manager Who Never Shies Away from a Good Challenge</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
               <li>
@@ -111,8 +111,8 @@
               <br/><br/>
               <h2 class="text-center">About Me</h2>
               <br/>
-              <p>I never stop enjoying the endless depths of the coding world. When asked about my side projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
-							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If my application isn't constantly iterating and changing, it's only a matter of time until it no longer exists.</p>
+              <p>I never stop enjoying the endless depths of the engineering world. When asked about my projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
+							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If a product isn't constantly iterating and evolving, it's only a matter of time until it no longer exists.</p>
               <p>For more information on my background, feel free to view my resume <a href="images/alex_bannon_resume.pdf">here</a>.</p>
               <br/>
             </div>
