--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
               <br/><br/>
               <h2 class="text-center">About Me</h2>
               <br/>
-              <p>I never stop enjoying the endless depths of the engineering world. When asked about my projects, specifically "when do I feel that they are 100% complete," I typically answer: never.</p>
-							<p>Applications, languages, frameworks, libraries -- everything is meant to evolve and adapt. If a product isn't constantly iterating and evolving, it's only a matter of time until it no longer exists.</p>
-              <p>For more information on my background, feel free to view my resume <a href="images/alex_bannon_resume.pdf">here</a>.</p>
+              <p>I never stop enjoying the endless depths of the engineering world. I approach management with a servant-leadership style; only by focusing on the good of the team, the department, and the company can we cultivate an environment where everyone grows.</p>
+							<p>Fintech and B2C background</p>
+              <p>See my full <a href="images/alex_bannon_resume.pdf">resume</a> for more information.</p>
               <br/>
             </div>
         </div>
