--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="You can edit this line in _config.yml. It will appear in your document  head meta (for Google search results) and in your feed.xml site  description.">
+    <meta name="description" content="Alex Bannon's personal portfolio site.">
     <meta name="author" content="Alex Bannon">
 
     <title>Alex Bannon Portfolio</title>
@@ -77,7 +77,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<h1>Alex Bannon</h1>
-						<h3>Product-Focused Senior Engineering Manager Who Never Shies Away from a Good Challenge</h3>
+						<h3>Product-Focused Engineering Leader Who Never Shies Away from a Good Challenge</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
               <li>
